# mtuciLabs

./: .gitignore
1/: main.py
2/: pyproject.toml
2/fastapilab/: __init__.py  app.py
3/: script.js
it/2/: manage.py
it/2/fastapilab/: .gitignore  app.py
it/3/: index.html  styles.css
it/4/: package-lock.json  package.json
it/4/.devcontainer/: Dockerfile  devcontainer.json
it/4/src/pages/: Home.jsx
it/5/: README.md  table.json  table.sqlite
it/6/: README.md  table.json  table.sql
kib/: lab_1.circ  Отчет 1.md
kib/sem1/lab2/: lab_2.circ  Отчет 2.md
kib/sem2/: lights.circ
kib/sem2/lab1/: lights.circ  Макриденко_ЦУиМ.docx  отчет.md
